--- a/package.json
+++ b/package.json
@@ -2,47 +2,30 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "build": "webpack",
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
-    "prod": "webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --hotOnly",
-    "server": "node server.js",
-    "http": "http-server dist"
+    "build": "babel src/js -w -d dist/js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zcvfcat/webpack.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zcvfcat/webpack/issues"
+  },
+  "homepage": "https://github.com/zcvfcat/webpack#readme",
   "devDependencies": {
-    "@types/lodash": "^4.14.155",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
-    "csv-loader": "^3.0.3",
-    "express": "^4.17.1",
-    "file-loader": "^6.0.0",
-    "grunt-webpack": "^3.1.3",
-    "html-webpack-plugin": "^4.3.0",
-    "karma": "^5.1.0",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^8.0.1",
-    "mocha-webpack": "^1.1.0",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2",
-    "webpack-stream": "^5.2.1",
-    "workbox-webpack-plugin": "^5.1.3",
-    "xml-loader": "^1.2.1"
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "lodash": "^4.17.15",
-    "whatwg-fetch": "^3.0.0"
+    "@babel/polyfill": "^7.10.1"
   }
 }
